# SegQC-xnat

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  watch_and_resume.sh
.claude/: settings.json
.claude/agents/: builder.md  scout.md  test-writer.md  validator.md
.claude/commands/: aide-review-permissions.md  aide-run-queue.md
.claude/hooks/: log_permission_event.py
.claude/scripts/: review_permissions.py
.claude/skills/speckit-aide-create-item/: SKILL.md
.specify/: extensions.yml  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
docs/aide/: dataset-verse19.md  progress.md  roadmap.md  vision.md
docs/aide/items/: 013-centroids.md  (+24 more)
src/segqc/: __init__.py  _logging.py  cli.py  config.py  empty.py  feature_report.py  human_report.py  io.py  labels.py  report.py  report_schema_v0.json  verdict.py
tests/: conftest.py  synthetic.py  test_005_adversarial.py  test_007_empty_detection.py  test_008_verdict.py  test_009_json_report.py  test_010_human_report.py  test_010_pipeline.py  test_011_geometry.py  test_012_connected_components.py  test_013_centroids.py  test_014_spine_relationships.py  test_015_overlap.py  test_016_features_json.py  test_017_centroid_spline_fit.py  test_018_per_vertebra_spline_offset.py  test_019_vertebra_orientation_curvature.py  test_020_neighbour_consistency.py  test_021_sagittal_projection.py  test_022_stage3_serialisation.py  test_023_edt_centroid_depth.py  test_024_neighbourhood_comparison.py  test_025_fragmentation_index.py  test_cli_run.py  test_config.py  test_io.py  test_labels.py  test_logging_setup.py  test_permission_review.py  test_smoke.py  test_synthetic.py
tests/golden/: 016_features_report.json  022_stage3_report.json
(+30 files in other folders)
